--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,12 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<jakarta.validation-api-version>3.1.1</jakarta.validation-api-version>
 		<lombok-version>1.18.32</lombok-version>
 		<maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
+		<maven-surefire-plugin-version>3.4.0</maven-surefire-plugin-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spotbugs-annotations-version>4.9.3</spotbugs-annotations-version>
 		<spring-boot-version>2.7.18</spring-boot-version>
 		<spring-cloud-version>2021.0.9</spring-cloud-version>
 	</properties>
@@ -96,12 +99,12 @@
 		<dependency>
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
-			<version>3.1.1</version>
+			<version>${jakarta.validation-api-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.spotbugs</groupId>
 			<artifactId>spotbugs-annotations</artifactId>
-			<version>4.9.3</version>
+			<version>${spotbugs-annotations-version}</version>
 		</dependency>
 
 		<dependency>
@@ -129,6 +132,11 @@
 						<target>${java.version}</target>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin-version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
